Text in native popup is not always updated with Sogou IME

XMLWordPrintable

        When using Sogou Chinese input method on Windows, text displayed in
        native popup is not always updated after keyboard input.
        This issue is observed for latest Java 8 version (1.8.0_131) on Windows 7
        ('ver' output: 6.1.7601), but not on Windows 10.
        This is a regression - previous Java version (1.8.0_121) works fine.

        To reproduce, first install Sogou input method (installer can be downloaded
        from http://www.sogou.com/pinyin/), then launch sample application (source
        file is attached). Choose Sogou as an active input method and try to type in
        application's text field. E.g. type something like 'hahahahahaha', then use
        Backspace to delete the text. It is expected that text in a text field and in
        IME popup change synchronously, but it's not the case, e.g. after all entered
        text is deleted using Backspace, popup still displays a letter 'l'.

              Assignee:
              Prasanta Sadhukhan
              Reporter:
              Shadow Bug
              Votes:
              0 Vote for this issue
              Watchers:
              8 Start watching this issue

                Created:
                Updated:
                Resolved: