8184016: Text in native popup is not always updated with Sogou IME

Reviewed-by: ssadetsky